v3.7.5 (XXXX-XX-XX)
-------------------

* Fixed an AQL bug that ignored PRUNE statements in OneShard setups.

* Added arangobench options:
  `--create-database` to create the test database on start
	`--duration` to run test for a duration rather than a defined count

* Fixed a deadlock between AQL write transactions and hotbackup, since in AQL
  write transactions follower transactions did not know they are follower
  transactions.

* Make the DOCUMENT AQL function eligible for running on DB servers in OneShard
  deployment mode. This allows pushing more query parts to DB servers for
  execution.

* Fix REST API endpoint PUT `/_api/collection/<collection>/recalculateCount` on
  coordinators. Coordinators sent a wrong message body to DB servers here, so
  the request could not be handled properly.

* Fixed issue #12778: fails validation if additionalProperties: false.

* Added missing exceptions catch clause for some parts of supervision and
  heartbeat threads.

* Fixed potential deadlock in cluster transactions if a transaction is returned
  that was soft-aborted by transaction garbage collection before.
  This deadlock should rarely ever occur in practice, as it can only be
  triggered once during the server shutdown sequence.

* Fix a memory leak because server internal connections were not cleaned up for
  agency communication.

* Added compile option USE_JEMALLOC_PROF to enable memory profiling.

* Fixed BTS-233 issue: Fixed invalid IndexId comparator.

* Fixed very spurious errors if the `holdReadLockCollection` replication API for
  the getting-in-sync procedure of shards was called during server shutdown.
  In this case that method could ask the transaction manager for a specific
  transaction, but wasn't returning one due to the server shutdown.

* Agency cache clears change history. This keeps the change history, introduced
  in v3.7.4, from growing in size too much.

* Bug-fix: Allow to unlink a view created on a SmartGraphEdge collection.
